# R-Type

./: .gitignore  CMakeLists.txt  Makefile  conanfile.txt  unit_tests
doc/: configuration  protocol.txt  rfc.txt
src/: Shared.hpp
src/client/: Client.cpp  Client.hpp  ClientNetwork.cpp  ClientNetwork.hpp  main.cpp
src/client/game/: Game.cpp  Game.hpp
src/client/game/scene/: GameScene.cpp  GameScene.hpp  MenuScene.cpp  MenuScene.hpp
src/client/scene/: GameScene.cpp  GameScene.hpp  LobbyScene.cpp  LobbyScene.hpp  LoginScene.cpp  LoginScene.hpp  MenuScene.cpp  MenuScene.hpp
src/interface/: IAudio.hpp  IEntityLoader.hpp  IEvent.hpp  IGameEngine.hpp  IGraphic.hpp  IGraphicModule.hpp  INetwork.hpp  IScene.hpp  ISystem.hpp  ITimer.hpp
src/server/: GameSession.cpp  GameSession.hpp  Server.cpp  Server.hpp  ServerNetwork.cpp  ServerNetwork.hpp  ServerSession.cpp  ServerSession.hpp  main.cpp
src/shared/encapsulation/fork/: Fork.cpp  Fork.hpp  ForkException.hpp
src/shared/engine/: GameEngine.cpp  GameEngine.hpp
src/shared/engine/component/: Collision.hpp  Component.hpp  ComponentStorage.hpp  Health.hpp  Key.hpp  Position.hpp  Speed.hpp
src/shared/engine/components/: Component.hpp  ComponentManager.hpp  ComponentStorage.hpp  Position.cpp
src/shared/engine/components/direction/: Direction.cpp  Direction.hpp
src/shared/engine/components/position/: Position.hpp
src/shared/engine/components/speed/: Speed.cpp  Speed.hpp
src/shared/engine/entity/: CollableEntity.cpp  CollableEntity.hpp  Entity.cpp  Entity.hpp  EntityCreator.cpp  EntityCreator.hpp  EntityManager.cpp  EntityManager.hpp
src/shared/engine/event/: CollisionEvent.cpp  CollisionEvent.hpp  Event.cpp  Event.hpp  EventManager.hpp
src/shared/engine/loader/: DLLoader.hpp
src/shared/engine/module/graphic/: SfmlGraphicModule.cpp  SfmlGraphicModule.hpp
src/shared/engine/network/: BoostNetwork.cpp  BoostNetwork.hpp  GameNetwork.cpp  GameNetwork.hpp  Packet.cpp  Packet.hpp  PacketException.hpp
src/shared/engine/system/: CollisionSystem.cpp  CollisionSystem.hpp
src/shared/engine/system/movement/: MovementSystem.cpp  MovementSystem.hpp
src/shared/exception/: BaseException.cpp  BaseException.hpp
src/shared/game/: Game.cpp  Game.hpp  GameNetwork.hpp
src/shared/game/component/: Health.hpp
src/shared/game/scene/: GameScene.cpp  GameScene.hpp  LobbyScene.cpp  LobbyScene.hpp  LoginScene.cpp  LoginScene.hpp  MenuScene.cpp  MenuScene.hpp
src/shared/network/: BoostNetwork.cpp  BoostNetwork.hpp  BoostNetworkException.hpp  Network.cpp  Network.hpp  NetworkException.hpp  Packet.cpp  Packet.hpp  PacketException.hpp
src/shared/sfml/audio/: SfmlAudio.cpp  SfmlAudio.hpp
src/shared/sfml/component/: Button.hpp  Music.hpp  Position.hpp  Sound.hpp  Speed.hpp  Sprite.hpp  Text.hpp
src/shared/sfml/entity/: BulletEntity.cpp  BulletEntity.hpp  ButtonEntity.cpp  ButtonEntity.hpp  EnemyEntity.cpp  EnemyEntity.hpp  InputEntity.cpp  InputEntity.hpp  MouseEntity.cpp  MouseEntity.hpp  ParallaxEntity.cpp  ParallaxEntity.hpp  SoundEntity.cpp  SoundEntity.hpp  SpriteEntity.cpp  SpriteEntity.hpp
src/shared/sfml/event/: FireEvent.cpp  FireEvent.hpp  InputEvent.cpp  InputEvent.hpp
src/shared/sfml/graphic/: SfmlGraphic.cpp  SfmlGraphic.hpp
src/shared/sfml/system/: AnimationSystem.cpp  AnimationSystem.hpp  BulletSystem.cpp  BulletSystem.hpp  ButtonSystem.cpp  ButtonSystem.hpp  EnemySystem.cpp  EnemySystem.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  ParallaxSystem.cpp  ParallaxSystem.hpp  PositionSystem.cpp  PositionSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
src/shared/sfml/timer/: SfmlTimer.cpp  SfmlTimer.hpp
tests/: boost_tests.cpp  component_storage_tests.cpp  dumb_test.cpp  packet_tests.cpp
tests/engine/: component_storage_tests.cpp  engine_tests.cpp
tests/engine/components/: component_manager_tests.cpp  direction_tests.cpp  position_tests.cpp  speed_tests.cpp
tests/engine/entity/: entity_manager_tests.cpp  entity_tests.cpp
tests/engine/system/: movement_system_tests.cpp
